@@ -5,6 +5,7 @@ S3method(drawDetails,interactivePolygonGrob)
 S3method(drawDetails,interactivePolylineGrob)
 S3method(drawDetails,interactiveRectGrob)
 S3method(drawDetails,interactiveSegmentsGrob)
+S3method(drawDetails,interactiveTextGrob)
 export(dml_docx)
 export(dml_pptx)
 export(dsvg)
@@ -14,6 +15,7 @@ export(interactivePolygonGrob)
 export(interactivePolylineGrob)
 export(interactiveRectGrob)
 export(interactiveSegmentsGrob)
+export(interactiveTextGrob)
 export(rvg_tracer_off)
 export(rvg_tracer_on)
 export(send_click)
