@@ -9,5 +9,7 @@
 ## New features
 
 * grid support for interactive points,
-  polygons, polylines, rectangles and segments
+  polygons, polylines, rectangles,
+  segments and text
+
 
